[project]
name = "topics"
version = "0.1.0"
description = ""
authors = [
    {name = "atoptun",email = "at@atompark.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "btrees (>=6.1,<7.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mmh3 (>=5.2.0,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
