[project]
name = "topics"
version = "0.1.0"
description = ""
authors = [
    {name = "atoptun",email = "at@atompark.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "btrees (>=6.1,<7.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mmh3 (>=5.2.0,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "redis-lru (>=0.1.2,<0.2.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
